# SupraSimFit

./: .claudeignore  .gitattributes  .gitignore  .graphifyignore  .mcp.json  CLAUDE.md  FittingApp.spec  Readme.md  SupraSimFit.spec  _version.py  main.py  pyproject.toml  requirements.txt  run_app.py
.claude/: settings.json
.github/workflows/: auto_tag.yml  build_and_release.yml
core/: __init__.py  forward_model.py  simulation.py  units.py
core/assays/: __init__.py  base.py  dba.py  dye_alone.py  gda.py  h2g.py  hg2.py  ida.py  registry.py
core/data_processing/: __init__.py  concentration.py  measurement_set.py  plotting.py  preprocessing.py
core/fitting/: base_merge.py  dba_dye_to_host.py  dba_host_to_dye.py  dye_alone.py  full_plate_fit.py  gda.py  ida.py
core/io/: __init__.py  base.py  registry.py  template.py
core/models/: __init__.py  equilibrium.py  linear.py
core/optimizer/: __init__.py  ensemble.py  filters.py  linear_fit.py  multistart.py  scaling.py
core/pipeline/: __init__.py  fit_pipeline.py
data/: IDA_system.txt  Readme.md
docs/: pint-audit.md  pint-findings.md  scientific-summary.md
examples/: data_snythesis_example.py  data_snythesis_ida.py  plotting_demo.py
graphify-out/: .graphify_labels.json  .graphify_root  GRAPH_REPORT.md  graph.json  manifest.json
graphify-out/wiki/: App_Launch_&_Main_Window.md  AssayType.md  Assay_Base_&_Registry_Metadata.md  Assay_Condition_Fields.md  Assay_Conditions_Registry.md  Axis_Exponent_Formatting.md  BMG_Reader.md  BMG_Workbook_Parsing.md  BaseAssay.md  BaseAssay_Contracts.md  BaseAssay_Interface.md  Batch_Artefact_Export.md  Bounds_Resolution_Helpers.md  CSV_Reader.md  Channel_Combo_Tests.md  Checkbox_Grid_UI_Helpers.md  Competitive_Model_Tests.md  Concentration_Helpers.md  Concentration_I-O_Round-trip.md  Content-Sniffing_Registry.md  Core_Domain_Init.md  DBA_Assay_Integration.md  DBA_Datasets_&_Txt_Reader.md  DBA_Quantity_Conditions.md  DataFrame_Validation.md  DataPanel.md  Data_Panel_Tests.md  Data_Processing_&_Preprocessing.md  Distribution_Plot_Widget.md  Distributions_Export_Config.md  Dye-Alone_Calibration_&_Scaling.md  Dye-Alone_Calibration_Chain.md  Dye-Alone_Fail-Fast.md  EnSight_Loading_&_Channels.md  EnSight_Reader.md  Excel_Reader.md  (+99 more)
gui/: app_state.py  assay_descriptions.py  base_gui.py  download_worker.py  fitting_session.py  interface_DBA_dye_to_host_fitting.py  interface_DBA_host_to_dye_fitting.py  interface_DyeAlone_fitting.py  interface_GDA_fitting.py  interface_IDA_fitting.py  interface_dba_merge_fits.py  interface_gda_merge_fits.py  interface_ida_merge_fits.py  main_window.py  parameter_descriptions.py  preferences.py  session.py  update_check.py  update_dialog.py  workers.py
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
tests/: CLAUDE.md  conftest.py
utils/: plot_utils.py
(+113 files in other folders)
