[project]
name = "fitting-app"
version = "0.1.0"
description = "GUI and CLI tools for analysing and fitting biochemical assay data with model-based parameter estimation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "h5netcdf>=1.8.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "openpyxl>=3.1.5",
    "pandas>=3.0.0",
    "pillow>=12.1.0",
    "pint>=0.25.2",
    "pyarrow>=23.0.0",
    "scipy>=1.17.0",
    "xarray>=2026.1.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "sphinx>=9.1.0",
    "sphinx-design>=0.7.0",
    "sphinxawesome-theme>=6.0.0",
]
