[project]
name = "fitting-app"
version = "0.1.0"
description = "GUI and CLI tools for analysing and fitting biochemical assay data with model-based parameter estimation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "openpyxl>=3.1.5",
    "pandas>=3.0.0",
    "pillow>=12.1.0",
    "pint>=0.25.2",
    "pyqt6>=6.10.2",
    "pyqtgraph>=0.14.0",
    "scipy>=1.17.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.1",
    "sphinx>=9.1.0",
    "sphinx-design>=0.7.0",
    "sphinxawesome-theme>=6.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
