[tool.uv]
package = false

[project]
name = "fitting-app"
# This value is a stub required by PEP 621 / uv and is NOT the app version.
# SupraSimFit ships as a PyInstaller binary, not a pip-installable package,
# so this field is never consumed. The real, single source of truth is
# `__version__` in `_version.py` at the repo root.
version = "0.0.0"
description = "GUI and CLI tools for analysing and fitting biochemical assay data with model-based parameter estimation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "openpyxl>=3.1.5",
    "packaging>=26.0",
    "pandas>=3.0.0",
    "pint>=0.25.2",
    "pyqt6>=6.10.2",
    "pyqtgraph>=0.14.0",
    "scipy>=1.17.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.1",
    "sphinx>=9.1.0",
    "sphinx-design>=0.7.0",
    "sphinxawesome-theme>=6.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
# Ruff's default set (E4/E7/E9 + F) plus import sorting (I). The codebase
# already passes E4/E7/E9. Deliberately NOT enabled: E501 (the formatter owns
# line width), UP (the code mixes Dict/dict and Optional/|, so pyupgrade would
# impose one style rather than match), and RUF001-003 (they flag the
# intentional scientific Unicode: µ, M⁻¹, HG₂, ×10ⁿ).
select = ["E4", "E7", "E9", "F", "I"]

[tool.ruff.format]
quote-style = "single"
